Initial database connection

--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 {% set active_page = "about" %}
 {% block content %}
-<p>All that you need to know is on the Unit Brightspace.</p>
+<div class="starter-template">
+    <h1>Welcome to Advanced Development </h1>
+    <h1>Welcome to Advanced Development </h1>
+    <h1>Welcome to Advanced Development </h1>
+    <h1>Welcome to Advanced Development </h1>
+    <p class="lead">The aims of this unit is to give students a critical understanding of the design of applications
+        which support enterprise activities. There will be an emphasis on software productivity in large scale
+        distributed, heterogeneous applications.</p>
+    <p>All that you need to know is on the Unit Brightspace.</p>
+</div>
 {% endblock %}
