--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -24,6 +24,7 @@
 {% set active_page = active_page|default('home') -%}
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <img src="../static/assets/companyLogo.png" alt="Company Logo"/>
     <!-- Navbar branding. -->
     <a class="navbar-brand" href="#">WS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" datatarget="#navbarsExampleDefault"
