--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -5,7 +5,7 @@
     <h1>Welcome to Advanced Development </h1>
     <h1>Welcome to Advanced Development </h1>
     <h1>Welcome to Advanced Development </h1>
-    <h1>Welcome to Advanced Development </h1>
+    <h1>Welcome to Home </h1>
     <p class="lead">The aims of this unit is to give students a critical understanding of the design of applications
         which support enterprise activities. There will be an emphasis on software productivity in large scale
         distributed, heterogeneous applications.</p>
