--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,67 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-tofit=no">
-    <meta name="description" content="Advanced Development">
-    <meta name="author" content="Xin Lu">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Parcel Tracker">
+    <meta name="author" content="Callum Kirkman">
 
-    <!--<link rel="icon" href="TODO">-->
-    <!-- Favicons (http://realfavicongenerator.net) TODO -->
-    <!-- Open Graph TODO -->
-
-    <title>Advanced Development Unit</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- Custom styles -->
-    <link href="static/css/custom.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--    &lt;!&ndash; Custom styles &ndash;&gt;-->
+    <link href="../static/css/style.css" rel="stylesheet">
+
 </head>
 
-<!-- Jinja2 stuff related to generating nav and setting active state. Add more pages here! -->
-{% set navigation_bar = [('/', 'home', 'Home'), ('/about', 'about', 'About'), ('/register','register','Register')] -%}
-{% set active_page = active_page|default('home') -%}
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <img src="../static/assets/companyLogo.png" alt="Company Logo"/>
-    <!-- Navbar branding. -->
-    <a class="navbar-brand" href="#">WS</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" datatarget="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" ariaexpanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-            {% for href, id, caption in navigation_bar %}
-            {% if id == active_page %}
-            <li class="nav-item active">
-                <a class="navlink" href="{{ href|e }}">{{ caption|e }} <span class="sronly">(current)</span></a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ href|e }}">{{ caption|e }}</a>
-            </li>
-            {% endif %}
-            {% endfor %}
-        </ul>
+
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+        <img src="../static/assets/companyLogo.png" alt="Company Logo"/>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a href="{{ url_for('home') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ url_for('about') }}">About</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
-<main role="main" class="container">
+
+<main role="main" class="container" style="margin-top:200px">
     <!-- Content -->
     {% block content %}
     {% endblock %}
-</main><!-- /.container -->
-<!-- Bootstrap core JavaScript ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://code.jquery.com/jquery3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+
+</main>
 </body>
 </html>
