Nav bar custom CSS & sizing change

--- a/flaskr/static/css/style.css
+++ b/flaskr/static/css/style.css
@@ -4,20 +4,14 @@
   display: block;
   color: white;
   text-align: center;
-  padding: 65px 45px;
+  padding: 30px 30px;
   text-decoration: none;
   font-size: 28px;
 }
 
 /* Style the links inside the navigation bar */
 .nav-item active a {
-  float: left;
-  display: block;
   color: #DCDCDC;
-  text-align: center;
-  padding: 65px 45px;
-  text-decoration: none;
-  font-size: 28px;
 }
 
 /* Change the color of links on hover */
@@ -25,7 +19,7 @@
   background-color: #ddd;
 }
 
-/* Add an active class to highlight the current page */
+/* Add an active class to highlight the current page
 .container-fluid a.nav-link {
   background-color: #DCDCDC;
-}
+} */
