--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -12,5 +12,6 @@
         which support enterprise activities. There will be an emphasis on software productivity in large scale
         distributed, heterogeneous applications.</p>
     <p>All that you need to know is on the Unit Brightspace.</p>
+    <p>The first line is {{ current_msg }}</p>
 </div>
 {% endblock %}
