--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -22,7 +22,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <img src="../static/assets/companyLogo.png" alt="Company Logo"/>
+        <img src="../static/assets/companyLogo.png" alt="Company Logo" width="100" height="100"/>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
