--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -23,26 +23,48 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <img src="../static/assets/companyLogo.png" alt="Company Logo" width="100" height="100"/>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
+        <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+                <a href="{{ url_for('home') }}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{ url_for('about') }}">About</a>
+            </li>
+        </ul>
+        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#myModal">
+            Log In
         </button>
-        <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a href="{{ url_for('home') }}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{ url_for('about') }}">About</a>
-                </li>
-            </ul>
-        </div>
     </div>
 </nav>
 
-<main role="main" class="container" style="margin-top:200px">
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Modal Heading</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                Modal body..
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+<main role="main" class="container" style="margin-top:120px">
     <!-- Content -->
-    {% block content %}
-    {% endblock %}
+    {% block content %}{% endblock %}
 
 </main>
 </body>
