--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% set active_page = "home" %}
+
 <h1>{% block title %}Home{% endblock %}</h1>
 
 {% set active_page = "home" %}
@@ -12,6 +13,6 @@
         which support enterprise activities. There will be an emphasis on software productivity in large scale
         distributed, heterogeneous applications.</p>
     <p>All that you need to know is on the Unit Brightspace.</p>
-<!--    <p>The first line is {{ current_msg }}</p>-->
+    <p>The first line is {{ data }}</p>
 </div>
 {% endblock %}
