--- a/flaskr/templates/404.html
+++ b/flaskr/templates/404.html
@@ -7,9 +7,9 @@
 {% block content %}
 <div class="container">
     <div>
-        <h3> 404 - <b>{{ request.path }}</b></h3>
-        <p> The requested URL was not found on the server. If you entered the URL manually please check your spelling
-            and try again. </p>
+        <!--<h3> 404 - <b>{{ request.path }}</b></h3>-->
+        <p> There was an error, or the requested URL was not found on the server. If you entered the URL manually please
+            check your spelling and try again. </p>
     </div>
-</div> <!-- /.container -->
+</div>
 {% endblock %}
