--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -13,9 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!--<link href="../static/css/style.css" rel="stylesheet">-->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'main.css') }}">
-
+    <link href="../static/css/main.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,41 +33,174 @@
                 <a href="{{ url_for('data') }}">Data</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#myModal">
-            Log In
-        </button>
+        <ul class="navbar-nav me-right">
+            <li class="logged-in">
+                <a href="#" class="btn btn-primary btn-lg btn-info modal-trigger"
+                   data-target="modal-account">Account</a>
+            </li>
+            <li class="logged-in">
+                <a href="#" class="btn btn-secondary btn-lg" id="logout">Logout</a>
+            </li>
+            <li class="logged-out">
+                <a href="#" class="btn btn-primary btn-lg modal-trigger" data-target="modal-login">Login</a>
+            </li>
+            <li class="logged-out">
+                <a href="#" class="btn btn-primary btn-lg modal-trigger" data-target="modal-signup">Sign up</a>
+            </li>
+        </ul>
     </div>
 </nav>
 
-<div class="modal" id="myModal">
-    <div class="modal-dialog">
+
+<!--&lt;!&ndash; SIGN UP MODAL &ndash;&gt;-->
+<!--<div id="modal-signup" class="modal">-->
+<!--    <div class="modal-dialog modal-dialog-centered">-->
+<!--        <div class="modal-content">-->
+<!--            <h4>Sign up</h4><br/>-->
+<!--            <form id="signup-form">-->
+<!--                <div class="input-field">-->
+<!--                    <input type="email" id="signup-email" required/>-->
+<!--                    <label for="signup-email">Email address</label>-->
+<!--                </div>-->
+<!--                <div class="input-field">-->
+<!--                    <input type="password" id="signup-password" required/>-->
+<!--                    <label for="signup-password">Choose password</label>-->
+<!--                </div>-->
+<!--                <button class="btn yellow darken-2 z-depth-0">Sign up</button>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!-- SIGN UP MODAL -->
+<div id="modal-signup" class="modal">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
+            <div class="wrapper fadeInDown">
+                <div id="formContentSignIn">
+                    <!-- Tabs Titles -->
+                    <!--<a href="http://127.0.0.1:5000/login"><h2 class="inactive underlineHover"> Sign In </h2></a>-->
+                    <!--<h2 class="active">Sign Up </h2>-->
 
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Modal Heading</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <!-- Icon -->
+                    <div class="fadeIn first">
+                        <img src="../static/assets/user.png" id="SignIcon" alt="User Icon"/>
+                    </div>
+
+                    <!-- Login Form -->
+                    <form action="http://127.0.0.1:5000/register" method="POST">
+                        <input type="text" id="name" class="fadeIn second" name="name" placeholder="name">
+                        <input type="email" id="loginS" class="fadeIn second" name="email" placeholder="email">
+                        <input type="password" id="passwordS" class="fadeIn third" name="pass" placeholder="password">
+                        <input type="password" id="confirmPassword" class="fadeIn third" name="confPass"
+                               placeholder="Confirm password">
+                        <input type="submit" class="fadeIn fourth" value="Sign Up">
+                    </form>
+
+                </div>
             </div>
-
-            <!-- Modal body -->
-            <div class="modal-body">
-                Modal body..
-            </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-            </div>
-
         </div>
     </div>
 </div>
 
+<!--&lt;!&ndash; LOGIN MODAL &ndash;&gt;-->
+<!--<div id="modal-login" class="modal">-->
+<!--    <div class="modal-dialog">-->
+<!--        <div class="modal-content">-->
+<!--            <h4>Login</h4><br/>-->
+<!--            <form id="login-form">-->
+<!--                <div class="input-field">-->
+<!--                    <input type="email" id="login-email" required/>-->
+<!--                    <label for="login-email">Email address</label>-->
+<!--                </div>-->
+<!--                <div class="input-field">-->
+<!--                    <input type="password" id="login-password" required/>-->
+<!--                    <label for="login-password">Your password</label>-->
+<!--                </div>-->
+<!--                <button class="btn yellow darken-2 z-depth-0">Login</button>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+
+<!-- LOGIN MODAL -->
+<div id="modal-login" class="modal">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="wrapper fadeInDown">
+                <div id="formContentLogIn">
+                    <!-- Tabs Titles -->
+                    <!--<h2 class="active"> Sign In </h2>-->
+                    <!--<a href="http://127.0.0.1:5000/signup"><h2 class="inactive underlineHover">Sign Up </h2></a>-->
+
+                    <!-- Icon -->
+                    <div class="fadeIn first">
+                        <img src="../static/assets/user.png" id="logIcon" alt="User Icon"/>
+                    </div>
+
+                    <!-- Login Form -->
+                    <form action="http://127.0.0.1:5000/result" method="POST">
+                        <input type="email" id="loginL" class="fadeIn second" name="email" placeholder="email">
+                        <input type="password" id="passwordL" class="fadeIn third" name="pass" placeholder="password">
+                        <input type="submit" class="fadeIn fourth" value="Log In">
+                    </form>
+                    <!--
+                        Will add in future
+                        <div id="formFooter">
+                          <a class="underlineHover" href="#">Forgot Password?</a>
+                        </div>
+                     -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- ACCOUNT MODAL -->
+<div id="modal-account" class="modal">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content center-align">
+            <h4>Account details</h4><br/>
+            <div class="account-details"></div>
+        </div>
+    </div>
+</div>
+
+
+<!--<div class="modal" id="myModal">-->
+<!--    <div class="modal-dialog">-->
+<!--        <div class="modal-content">-->
+
+<!--            &lt;!&ndash; Modal Header &ndash;&gt;-->
+<!--            <div class="modal-header">-->
+<!--                <h4 class="modal-title">Modal Heading</h4>-->
+<!--                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash; Modal body &ndash;&gt;-->
+<!--            <div class="modal-body">-->
+<!--                Modal body..-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash; Modal footer &ndash;&gt;-->
+<!--            <div class="modal-footer">-->
+<!--                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>-->
+<!--            </div>-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <main role="main" class="container" style="margin-top:120px">
     <!-- Content -->
     {% block content %}{% endblock %}
 
 </main>
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="../static/scripts/auth.js"></script>
+<script src="../static/scripts/index.js"></script>
 </body>
 </html>
