--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -11,8 +11,8 @@
     <h1>Welcome to Home</h1>
     <p>Welcome to the main page of my app</p>
 
-    <h1 class="name">Hi, {{name}}</h1><hr style="width: 30%">
-	<h3 class="email">{{email}}</h3>
+<!--    <h1 class="name">Hi, {{name}}</h1><hr style="width: 30%">-->
+<!--	<h3 class="email">{{email}}</h3>-->
 </div>
 </body>
 {% endblock %}
