--- a/flaskr/templates/register.html
+++ b/flaskr/templates/register.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="starter-template">
-    <h1>Register your informaiton </h1>
+    <h1>Register your information </h1>
     <p class="lead"><i>Please type your information </i></p>
 </div>
 <div id="main">
