--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -78,10 +78,6 @@
         <div class="modal-content">
             <div class="wrapper fadeInDown">
                 <div id="formContentSignIn">
-                    <!-- Tabs Titles -->
-                    <!--<a href="http://127.0.0.1:5000/login"><h2 class="inactive underlineHover"> Sign In </h2></a>-->
-                    <!--<h2 class="active">Sign Up </h2>-->
-
                     <!-- Icon -->
                     <div class="fadeIn first">
                         <img src="../static/assets/user.png" id="SignIcon" alt="User Icon"/>
@@ -96,7 +92,6 @@
                                placeholder="Confirm password">
                         <input type="submit" class="fadeIn fourth" value="Sign Up">
                     </form>
-
                 </div>
             </div>
         </div>
@@ -130,10 +125,6 @@
         <div class="modal-content">
             <div class="wrapper fadeInDown">
                 <div id="formContentLogIn">
-                    <!-- Tabs Titles -->
-                    <!--<h2 class="active"> Sign In </h2>-->
-                    <!--<a href="http://127.0.0.1:5000/signup"><h2 class="inactive underlineHover">Sign Up </h2></a>-->
-
                     <!-- Icon -->
                     <div class="fadeIn first">
                         <img src="../static/assets/user.png" id="logIcon" alt="User Icon"/>
@@ -145,12 +136,10 @@
                         <input type="password" id="passwordL" class="fadeIn third" name="pass" placeholder="password">
                         <input type="submit" class="fadeIn fourth" value="Log In">
                     </form>
-                    <!--
-                        Will add in future
-                        <div id="formFooter">
-                          <a class="underlineHover" href="#">Forgot Password?</a>
-                        </div>
-                     -->
+                    <div id="formFooter">
+                        <a class="underlineHover float-right" href="#">Forgot Password?</a>
+                        <button type="button" class="btn btn-danger float-right" data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -163,34 +152,10 @@
         <div class="modal-content center-align">
             <h4>Account details</h4><br/>
             <div class="account-details"></div>
+            <div class="account-details"></div>
         </div>
     </div>
 </div>
-
-
-<!--<div class="modal" id="myModal">-->
-<!--    <div class="modal-dialog">-->
-<!--        <div class="modal-content">-->
-
-<!--            &lt;!&ndash; Modal Header &ndash;&gt;-->
-<!--            <div class="modal-header">-->
-<!--                <h4 class="modal-title">Modal Heading</h4>-->
-<!--                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash; Modal body &ndash;&gt;-->
-<!--            <div class="modal-body">-->
-<!--                Modal body..-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash; Modal footer &ndash;&gt;-->
-<!--            <div class="modal-footer">-->
-<!--                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>-->
-<!--            </div>-->
-
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
 <main role="main" class="container" style="margin-top:120px">
     <!-- Content -->
