--- a/flaskr/templates/user_home.html
+++ b/flaskr/templates/user_home.html
@@ -10,6 +10,9 @@
 <div class="main-body">
     <h1>Welcome to Company name</h1>
     <p>Welcome to the main page of my app</p>
+
+    <h1 class="name">Hi, {{name}}</h1><hr style="width: 30%">
+	<h3 class="email">{{email}}</h3>
 </div>
 </body>
 {% endblock %}
