--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -84,7 +84,7 @@
                     </div>
 
                     <!-- Login Form -->
-                    <form action="http://127.0.0.1:5000/register" method="POST">
+                    <form action="{{ url_for('register') }}" method="POST">
                         <input type="text" id="name" class="fadeIn second" name="name" placeholder="name">
                         <input type="email" id="loginS" class="fadeIn second" name="email" placeholder="email">
                         <input type="password" id="passwordS" class="fadeIn third" name="pass" placeholder="password">
@@ -131,7 +131,7 @@
                     </div>
 
                     <!-- Login Form -->
-                    <form action="http://127.0.0.1:5000/result" method="POST">
+                    <form action="{{ url_for('result') }}" method="POST">
                         <input type="email" id="loginL" class="fadeIn second" name="email" placeholder="email">
                         <input type="password" id="passwordL" class="fadeIn third" name="pass" placeholder="password">
                         <input type="submit" class="fadeIn fourth" value="Log In">
