post account details to account page & code restructure

--- a/flaskr/templates/user_home.html
+++ b/flaskr/templates/user_home.html
@@ -9,7 +9,7 @@
 <body>
 <div class="main-body">
     <h1>Welcome to Company name</h1>
-    <p>Welcome to the main page of my app</p>
+    <p>Welcome to the member page of my app</p>
 
     <h1 class="name">Hi, {{name}}</h1><hr style="width: 30%">
 	<h3 class="email">{{email}}</h3>
