--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -10,9 +10,11 @@
 <div class="main-body">
     <h1>Welcome to your profile</h1>
 
-    <h4>Account details</h4><br/>
-    <p>Name, Email, Address, Picture</p>
-    <h4>Orders?</h4><br/>
+    <h3>Account details</h3><br/>
+    <h4 class="name">{{name}}</h4>
+    <h4 class="email">{{email}}</h4>
+    <h5>Address, Picture</h5>
+    <h5>Orders?</h5><br/>
     <div class="account-details"></div>
     <div class="account-details"></div>
 </div>
