add order tracking

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -30,6 +30,9 @@
                 <a href="{{ url_for('data') }}">Data</a>
             </li>
             <li class="nav-item">
+                <a href="{{ url_for('tracking') }}">Order Tracking</a>
+            </li>
+            <li class="nav-item">
                 <a href="{{ url_for('about') }}">About</a>
             </li>
         </ul>
