unmerge css & add item photos

--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -2,7 +2,7 @@
 {% set active_page = "data" %}
 
 <head>
-    <h1>{% block title %}Data{% endblock %}</h1>
+    {% block title %}Data{% endblock %}
 </head>
 
 {% block content %}
