--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="../static/css/main.css" rel="stylesheet">
-<!--    <link href="../static/css/style.css" rel="stylesheet">-->
+    <link href="../static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
