--- a/flaskr/templates/404.html
+++ b/flaskr/templates/404.html
@@ -8,8 +8,9 @@
 <div class="container">
     <div>
         <!--<h3> 404 - <b>{{ request.path }}</b></h3>-->
-        <p> There was an error, or the requested URL was not found on the server. If you entered the URL manually please
-            check your spelling and try again. </p>
+        <br>
+        <h2> There was an error, or the requested URL was not found on the server.
+            If you entered the URL manually please check your spelling and try again. </h2>
     </div>
 </div>
 {% endblock %}
