--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <img src="../static/assets/companyLogo.png" alt="Company Logo" width="85" height="85"/>
@@ -120,6 +119,7 @@
         <div class="modal-content center-align">
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             <h4>Basket details</h4><br/>
+            <!-- TODO: Total price -- Total quantity? -- if quantity = none, remove? -->
         </div>
     </div>
 </div>
