--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -8,9 +8,32 @@
 {% block content %}
 <body>
 <div class="main-body">
-    <h1>Welcome to Data</h1>
-    <p>The database contains: </p>
-    <p>{{ data }}</p>
+    <h1>Welcome to Data</h1><br>
+</div>
+
+
+<div id="product-grid">
+    <div class="txt-heading">Products</div>
+
+    {% for product in products %}
+
+    <div class="product-item">
+        <form method="post" action="{{ url_for('add_product_to_cart') }}">
+            <div class="product-image"><img src="../{{ product.image }}"></div>
+            <div class="product-tile-footer">
+                <div class="product-title">{{ product.name }}</div>
+                <div class="product-price">£ {{ product.price }}</div>
+                <div class="cart-action">
+                    <input type="hidden" name="code" value="{{ product.code }}"/>
+                    <input type="text" class="product-quantity" name="quantity" value="1" size="2"/>
+                    <input type="submit" value="Add to Cart" class="btnAddAction"/>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    {% endfor %}
+
 </div>
 </body>
 {% endblock %}
