Add login html for data screen & TODO's

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -119,7 +119,7 @@
         <div class="modal-content center-align">
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             <h4>Basket details</h4><br/>
-            <!-- TODO: Total price -- Total quantity? -- if quantity = none, remove? -->
+            <!-- TODO: Total price -- Total quantity? -- if quantity = none, remove? -- make html page? -->
         </div>
     </div>
 </div>
