--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -11,7 +11,6 @@
     <h1>Welcome to Data</h1><br>
 </div>
 
-
 <div id="product-grid">
     <div class="txt-heading">Products</div>
 
@@ -25,8 +24,8 @@
                 <div class="product-price">£ {{ product.price }}</div>
                 <div class="cart-action">
                     <input type="hidden" name="code" value="{{ product.code }}"/>
-                    <input type="text" class="product-quantity" name="quantity" value="1" size="2"/>
-                    <input type="submit" value="Add to Cart" class="btnAddAction"/>
+                    <input type="text" class="product-quantity logged-in" name="quantity" value="1" size="2"/>
+                    <input type="submit" value="Add to Cart" class="btnAddAction logged-in"/>
                 </div>
             </div>
         </form>
