Create basket & add item

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -44,6 +44,7 @@
                    data-target="modal-basket">Basket</a>
             </li>
             <li class="logged-in">
+                <!-- sign-out -->
                 <a href="{{ url_for('logout') }}" class="btn btn-secondary btn-lg" id="logout">Logout</a>
             </li>
             <li class="logged-out">
