--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -25,7 +25,7 @@
                 <div class="cart-action">
                     <input type="hidden" name="code" value="{{ product.code }}"/>
                     <input type="text" class="product-quantity logged-in" name="quantity" value="1" size="2"/>
-                    <input type="submit" value="Add to Cart" class="btnAddAction logged-in"/>
+                    <input type="submit" value="Add to Cart" class="btnAddAction logged-in"/><br>
                 </div>
             </div>
         </form>
