--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Parcel Tracker">
@@ -40,8 +39,7 @@
                 <a href="{{ url_for('account') }}" class="btn btn-primary btn-lg btn-info">Account</a>
             </li>
             <li class="logged-in">
-                <a href="#" class="btn btn-primary btn-lg btn-warning modal-trigger"
-                   data-target="modal-basket">Basket</a>
+                <a href="{{ url_for('checkout') }}" class="btn btn-primary btn-lg btn-warning">Basket</a>
             </li>
             <li class="logged-in">
                 <a onclick="logoutFunction()" href="{{ url_for('logout') }}" class="btn btn-secondary btn-lg"
@@ -115,16 +113,16 @@
     </div>
 </div>
 
-<!-- Basket MODAL -->
-<div id="modal-basket" class="modal">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content center-align">
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            <h4>Basket details</h4><br/>
-            <!-- TODO: Total price -- Total quantity? -- if quantity = none, remove? -- make html page? -->
-        </div>
-    </div>
-</div>
+<!--&lt;!&ndash; Basket MODAL &ndash;&gt;-->
+<!--<div id="modal-basket" class="modal">-->
+<!--    <div class="modal-dialog modal-lg">-->
+<!--        <div class="modal-content center-align">-->
+<!--            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>-->
+<!--            <h4>Basket details</h4><br/>-->
+<!--            &lt;!&ndash; TODO: Total price &#45;&#45; Total quantity? &#45;&#45; if quantity = none, remove? &#45;&#45; make html page? &ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <main role="main" class="container" style="margin-top:110px">
     <!-- Content -->
