--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -7,32 +7,44 @@
 
 {% block content %}
 <body>
-<div class="main-body">
-    <h1>Welcome to Data</h1><br>
-</div>
-
-<div id="product-grid">
-    <div class="txt-heading">Products</div>
-
-    {% for product in products %}
-
-    <div class="product-item">
-        <form method="post" action="{{ url_for('add_product_to_cart') }}">
-            <div class="product-image"><img src="../{{ product.image }}"></div>
-            <div class="product-tile-footer">
-                <div class="product-title">{{ product.name }}</div>
-                <div class="product-price">£ {{ product.price }}</div>
-                <div class="cart-action">
-                    <input type="hidden" name="code" value="{{ product.code }}"/>
-                    <input type="text" class="product-quantity logged-in" name="quantity" value="1" size="2"/>
-                    <input type="submit" value="Add to Cart" class="btnAddAction logged-in"/><br>
+<div class="container" style="margin-top: 40px !important;">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h1 class="text-center pageTitle">Available Products</h1>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
+    <br>
 
+    <div class="row">
+        {% for product in products %}
+        <div class="col-lg-3">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="thumbnail">
+                    <form method="post" action="{{ url_for('add_product_to_cart') }}">
+                        <div class="product-image"><img src="../{{ product.image }}" style="width:450px;height:450px;">
+                        </div>
+                        <hr/>
+                        <div class="caption text-center">
+                            <div class="product-title">{{ product.name }}</div>
+                            <div class="product-price">£ {{ product.price }}</div>
+                            <hr/>
+                            <div class="cart-action">
+                                <input type="hidden" name="code" value="{{ product.code }}"/>
+                                <input type="text" class="product-quantity logged-in" name="quantity" value="1"
+                                       size="2"/>
+                                <input type="submit" value="Add to Cart" class="btnAddAction logged-in"/><br>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     {% endfor %}
-
 </div>
 </body>
 {% endblock %}
