--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 <body>
+<!-- TODO: item page on click -->
 <div class="container" id="product-list" style="margin-top: 40px !important;">
     <div class="row">
         <div class="col-lg-12">
