--- a/flaskr/templates/checkout.html
+++ b/flaskr/templates/checkout.html
@@ -20,7 +20,12 @@
 </div>
 
 <div id="item-grid">
+    {% if (items == "No items in cart") %}
+    <h1>No items in cart</h1>
+
+    {% else %}
     {% for item in items %}
+
 
     <div class="item-item">
         <div class="item-tile-footer">
@@ -35,10 +40,13 @@
     </div>
 
     {% endfor %}
+    {% endif %}
 
     <div class="panel-body">
         <h4 class="text-center">Total price = {{ checkout_price }}</h4>
+        <a href="{{ url_for('empty_cart') }}" class="btn btn-danger vertical-center">Clear basket</a>
     </div>
+    <br><br>
 </div>
 </body>
 {% endblock %}
