--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -13,10 +13,21 @@
     <h3>Account details</h3><br/>
     <h4 class="name">{{name}}</h4>
     <h4 class="email">{{email}}</h4>
-    <h5>Address, Picture</h5>
+    <h4 class="address">{{address}}</h4>
+    <h4 class="picture">{{picture}}</h4>
     <h5>Orders?</h5><br/>
-    <div class="account-details"></div>
-    <div class="account-details"></div>
+
+    <form action="{{ url_for('update_account') }}" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="{{name}}"><hr><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="{{email}}"><hr><br>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" placeholder="{{address}}"><hr><br>
+        <label for="picture">Picture:</label>
+        <input type="file" id="picture" name="picture"><hr><br>
+        <input type="submit" value="Submit">
+    </form>
 </div>
 </body>
 {% endblock %}
