--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -124,7 +124,7 @@
 <!--    </div>-->
 <!--</div>-->
 
-<main role="main" class="container" style="margin-top:110px">
+<main role="main" class="container" id="base-container" style="margin-top:110px">
     <!-- Content -->
     {% block content %}{% endblock %}
 
