--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -9,6 +9,7 @@
 <body>
 <div class="main-body">
     <h1>Welcome to About</h1>
+    <!-- TODO: Add info -->
     <h3>Logo, company name, contact info</h3>
 </div>
 </body>
