remove base template viewport, add create order route

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <meta name="description" content="Parcel Tracker">
     <meta name="author" content="Callum Kirkman">
 
@@ -113,23 +113,11 @@
     </div>
 </div>
 
-<!--&lt;!&ndash; Basket MODAL &ndash;&gt;-->
-<!--<div id="modal-basket" class="modal">-->
-<!--    <div class="modal-dialog modal-lg">-->
-<!--        <div class="modal-content center-align">-->
-<!--            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>-->
-<!--            <h4>Basket details</h4><br/>-->
-<!--            &lt;!&ndash; TODO: Total price &#45;&#45; Total quantity? &#45;&#45; if quantity = none, remove? &#45;&#45; make html page? &ndash;&gt;-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
 <main role="main" class="container" id="base-container" style="margin-top:110px">
     <!-- Content -->
     {% block content %}{% endblock %}
 
 </main>
-
 
 <script>
     function chooseFunction() {
