Removal of script.js & cosmetic changes
about page update,
account page test data removed,
logo update

--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -8,9 +8,14 @@
 {% block content %}
 <body>
 <div class="main-body">
-    <h1>Welcome to About</h1>
-    <!-- TODO: Add info -->
-    <h3>Logo, company name, contact info</h3>
+    <hr>
+    <h1>ConsoleNET shipping</h1>
+    <img src="../static/assets/companyLogo.png" alt="Company Logo" width="320" height="320"/>
+    <hr>
+    <h2>Contact Us</h2>
+    <h3>Phone number: +44 7678 456242</h3>
+    <h3>Email: consoleNET@gmail.com</h3>
+    <hr>
 </div>
 </body>
 {% endblock %}
