--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 <body>
 <div class="main-body">
-    <h1>Welcome to Company name</h1>
+    <h1>Welcome to ConsoleNET</h1>
     <p>Welcome to the main page of my app</p>
 </div>
 </body>
