--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -10,15 +10,15 @@
 <div class="main-body">
     <h1>Welcome to your profile</h1>
 
-    <h3>Account details</h3><br/>
-    <h4 class="name">{{name}}</h4>
-    <h4 class="email">{{email}}</h4>
-    <h4 class="address">{{address}}</h4>
-    <h4 class="picture">{{picture}}</h4>
-    <h5>Orders?</h5><br/>
+<!--    <h3>Account details</h3><br/>-->
+<!--    <h4 class="name">{{name}}</h4>-->
+<!--    <h4 class="email">{{email}}</h4>-->
+<!--    <h4 class="address">{{address}}</h4>-->
+<!--    <h4 class="picture">{{picture}}</h4>-->
+<!--    <h5>Orders?</h5><br/>-->
 
     <form action="{{ url_for('update_account') }}" method="POST">
-        <label for="name">Name:</label>
+        <label for="name" style="">Name:</label>
         <input type="text" id="name" name="name" placeholder="{{name}}"><hr><br>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="{{email}}"><hr><br>
