--- a/flaskr/templates/user_home.html
+++ b/flaskr/templates/user_home.html
@@ -8,10 +8,11 @@
 {% block content %}
 <body>
 <div class="main-body">
-    <h1>Welcome to Company name</h1>
+    <h1>Welcome to ConsoleNET</h1>
     <p>Welcome to the member page of my app</p>
 
-    <h1 class="name">Hi, {{name}}</h1><hr style="width: 30%">
+    <h1 class="name">Hi, {{name}}</h1>
+    <hr style="width: 30%">
 	<h3 class="email">{{email}}</h3>
 </div>
 </body>
