--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -8,24 +8,28 @@
 {% block content %}
 <body>
 <div class="main-body">
-    <h1>Welcome to your profile</h1>
-
-<!--    <h3>Account details</h3><br/>-->
-<!--    <h4 class="name">{{name}}</h4>-->
-<!--    <h4 class="email">{{email}}</h4>-->
-<!--    <h4 class="address">{{address}}</h4>-->
-<!--    <h4 class="picture">{{picture}}</h4>-->
-<!--    <h5>Orders?</h5><br/>-->
+    <h1>{{name}} account details</h1>
+    <h5>Orders?</h5>
+    <br>
+    <hr>
 
     <form action="{{ url_for('update_account') }}" method="POST">
         <label for="name" style="">Name:</label>
-        <input type="text" id="name" name="name" placeholder="{{name}}"><hr><br>
+        <input type="text" id="name" name="name" placeholder="{{name}}">
+        <hr>
+        <br>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="{{email}}"><hr><br>
+        <input type="email" id="email" name="email" placeholder="{{email}}">
+        <hr>
+        <br>
         <label for="address">Address:</label>
-        <input type="text" id="address" name="address" placeholder="{{address}}"><hr><br>
+        <input type="text" id="address" name="address" placeholder="{{address}}">
+        <hr>
+        <br>
         <label for="picture">Picture:</label>
-        <input type="file" id="picture" name="picture"><hr><br>
+        <input type="file" id="picture" name="picture">
+        <hr>
+        <br>
         <input type="submit" value="Submit">
     </form>
     <a href="{{ url_for('delete_account') }}" class="btn btn-danger">Delete Account</a><br>
