Order date displayed,  reset global = logout updated

--- a/flaskr/templates/tracking.html
+++ b/flaskr/templates/tracking.html
@@ -37,6 +37,7 @@
         </div>
         {% endfor %}
         <div class="order-orderPrice">Total: £{{ each.order.orderPrice }}</div>
+        <div class="order-date">Date ordered: {{ each.order.date }}</div>
         <br>
         <div class="order-progress">Shipping progress: {{ each.order.progress }}</div>
         <hr>
