Added more products into database, added user profile to callum admin user, signup route assigns person globals, make items clickable on display

--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -9,7 +9,7 @@
 <body>
 <div class="main-body">
     <h1>{{name}} account details</h1>
-    <h5>Orders?</h5>
+    <img src="../{{picture}}">
     <br>
     <hr>
 
@@ -27,7 +27,7 @@
         <hr>
         <br>
         <label for="picture">Picture:</label>
-        <input type="file" id="picture" name="picture">
+        <input type="file" accept=".png, .jpg, .jpeg" id="picture" name="picture">
         <hr>
         <br>
         <input type="submit" value="Submit">
