--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -75,7 +75,7 @@
                     </form>
                     <div class="fadeIn fifth">
                         <a class="underlineHover float-right" href="#">Forgot Password?</a>
-                        <button type="button" class="btn btn-danger float-right" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger float-right" onclick="closeLogin()">Close</button>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                         <img src="../static/assets/user.png" id="SignIcon" alt="User Icon"/>
                     </div>
 
-                    <!-- Login Form -->
+                    <!-- Signup Form -->
                     <form action="{{ url_for('signup') }}" method="POST">
                         <input type="text" id="name" class="fadeIn second" name="name" placeholder="name">
                         <input type="email" id="loginS" class="fadeIn second" name="email" placeholder="email">
@@ -105,7 +105,7 @@
                     </form>
                     <div class="fadeIn fifth">
                         <a class="underlineHover float-right" href="#">Forgot Password?</a>
-                        <button type="button" class="btn btn-danger float-right" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger float-right" onclick="closeSignup()">Close</button>
                     </div>
                 </div>
             </div>
@@ -119,6 +119,20 @@
 
 </main>
 
+<script>
+    function closeLogin() {
+      let modal = document.querySelector('#modal-login');
+      M.Modal.getInstance(modal).close();
+    }
+    function closeSignup() {
+      let modal = document.querySelector('#modal-signup');
+      M.Modal.getInstance(modal).close();
+    }
+    function closeItem() {
+      let modal = document.querySelector('#modal-item');
+      M.Modal.getInstance(modal).close();
+    }
+</script>
 <script>
     function chooseFunction() {
       let status = '{{ logg_status }}';
@@ -162,7 +176,6 @@
 
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="../static/scripts/auth.js"></script>
 <script src="../static/scripts/index.js"></script>
 </body>
 </html>
