--- a/flaskr/templates/checkout.html
+++ b/flaskr/templates/checkout.html
@@ -38,7 +38,7 @@
 
         {% endfor %}
         <div class="panel-body">
-            <h4 class="text-center">Total price = {{ checkout_price }}</h4>
+            <h4 class="text-center">Total price: {{ checkout_price }}</h4>
             <a href="{{ url_for('empty_cart') }}" class="btn btn-danger vertical-center">Clear basket</a><br>
             <a href="{{ url_for('create_order') }}" class="btn btn-success vertical-center">Checkout</a>
         </div>
