--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -7,7 +7,6 @@
 
 {% block content %}
 <body>
-<!-- TODO: item page on click -->
 <div class="container" id="product-list" style="margin-top: 40px !important;">
     <div class="row">
         <div class="col-lg-12">
@@ -24,7 +23,9 @@
         {% for product in products %}
         <div class="thumbnail">
             <form method="post" action="{{ url_for('add_product_to_cart') }}">
-                <div class="product-image"><img src="../{{ product.image }}" style="width:450px;height:450px;">
+                <div class="product-image">
+                    <a href="#" class="modal-trigger" data-target="modal-item"><img src="../{{ product.image }}"
+                                                                                    style="width:450px;height:450px;"></a>
                 </div>
                 <hr/>
                 <div class="caption text-center">
@@ -41,6 +42,20 @@
             </form>
         </div>
         {% endfor %}
+    </div>
+</div>
+
+<!-- ITEM MODAL -->
+<div id="modal-item" class="modal">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <hr>
+            <h1>More information</h1>
+            <p>Information about product from database</p>
+            <hr>
+            <br>
+            <button type="button" class="btn btn-danger float-right" onclick="closeItem()">Close</button>
+        </div>
     </div>
 </div>
 </body>
