--- a/flaskr/templates/data.html
+++ b/flaskr/templates/data.html
@@ -30,7 +30,7 @@
                 <hr/>
                 <div class="caption text-center">
                     <div class="product-title">{{ product.name }}</div>
-                    <div class="product-price">£ {{ product.price }}</div>
+                    <div class="product-price">£ {{ product.price }}0</div>
                     <hr/>
                     <div class="cart-action">
                         <input type="hidden" name="code" value="{{ product.code }}"/>
