Slight main restructure & cosmetic changes

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -22,10 +22,9 @@
 </head>
 <body>
 
-<!--<body onload="chooseFunction()">-->
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <!--<img src="../static/assets/companyLogo.png" alt="Company Logo" width="85" height="85"/>-->
+        <img src="../static/assets/companyLogo.png" alt="Company Logo" width="85" height="85"/>
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
                 <a href="{{ url_for('home') }}">Signup</a>
