--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -17,6 +17,8 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- TODO: Fix styling -->
     <link href="../static/css/main.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
 </head>
@@ -27,7 +29,7 @@
         <img src="../static/assets/companyLogo.png" alt="Company Logo" width="85" height="85"/>
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
-                <a href="{{ url_for('home') }}">Signup</a>
+                <a href="{{ url_for('signup') }}">Signup</a>
             </li>
             <li class="nav-item">
                 <a href="{{ url_for('login') }}">Login</a>
@@ -53,6 +55,7 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 
+<!-- TODO: Fix spacing -->
 <br>
 <br>
 <br>
