--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -13,9 +13,9 @@
 
 <div class="wrapper fadeInDown">
     <div id="formContent">
-        <!-- Tabs Titles -->
-        <h2 class="active"> Sign In </h2>
-        <a href="http://127.0.0.1:5000/signup"><h2 class="inactive underlineHover">Sign Up </h2></a>
+        <!-- Tabs -->
+        <h2 class="active">Sign In</h2>
+        <a href="{{ url_for('signup') }}"><h2 class="inactive underlineHover">Sign Up</h2></a>
 
         <!-- Icon -->
         <div class="fadeIn first">
@@ -23,13 +23,13 @@
         </div>
 
         <!-- Login Form -->
-        <form action="http://127.0.0.1:5000/result" method="POST">
+        <form action="/result" method="POST">
             <input type="email" id="login" class="fadeIn second" name="email" placeholder="email">
             <input type="password" id="password" class="fadeIn third" name="pass" placeholder="password">
             <input type="submit" class="fadeIn fourth" value="Log In">
         </form>
         <!--
-            Will add in future
+            TODO: Will add in future
             <div id="formFooter">
               <a class="underlineHover" href="#">Forgot Password?</a>
             </div>
