--- a/flaskr/templates/login0.html
+++ b/flaskr/templates/login0.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Login System{% endblock %}
+{% set active_page = "login" %}
+
+<head>
+    <h1>{% block title %}Login{% endblock %}</h1>
+</head>
 
 {% block content %}
 
@@ -9,16 +13,33 @@
 </div>
 {% endif %}
 
-<form action="" method="post">
-    <div class="form-group">
-        <label for="InputEmail">Email address</label>
-        <input name="email" class="form-control" id="InputEmail" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<body>
+<div class="main-body">
+    <h1>Welcome to Login</h1>
+</div>
+
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <!-- Tabs -->
+        <h2 class="active">Login</h2>
+        <a href="{{ url_for('signup') }}"><h2 class="inactive underlineHover">Sign Up</h2></a>
+
+        <!-- Icon -->
+        <div class="fadeIn first">
+            <img src="../static/assets/user.png" id="icon" alt="User Icon"/>
+        </div>
+
+        <!-- Login Form -->
+        <form action="" method="post">
+            <div class="form-group">
+                <input type="email" name="email" class="fadeIn second form-control" id="InputEmail" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <input type="password" name="password" class="fadeIn third form-control" id="InputPassword" placeholder="Password">
+            </div>
+            <input type="submit" class="fadeIn fourth" value="Log In">
+        </form>
     </div>
-    <div class="form-group">
-        <label for="InputPassword">Password</label>
-        <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
+</body>
 {% endblock %}
