--- a/flaskr/templates/signup.html
+++ b/flaskr/templates/signup.html
@@ -14,8 +14,8 @@
 
 <div class="wrapper fadeInDown">
     <div id="formContent">
-        <!-- Tabs Titles -->
-        <a href="http://127.0.0.1:5000/login"><h2 class="inactive underlineHover"> Sign In </h2></a>
+        <!-- Tabs -->
+        <a href="{{ url_for('login') }}"><h2 class="inactive underlineHover">Sign In</h2></a>
         <h2 class="active">Sign Up </h2>
 
         <!-- Icon -->
@@ -24,7 +24,7 @@
         </div>
 
         <!-- Login Form -->
-        <form action="http://127.0.0.1:5000/register" method="POST">
+        <form action="/register" method="POST">
             <input type="text" id="name" class="fadeIn second" name="name" placeholder="name">
             <input type="email" id="login" class="fadeIn second" name="email" placeholder="email">
             <input type="password" id="password" class="fadeIn third" name="pass" placeholder="password">
