--- a/flaskr/templates/signup0.html
+++ b/flaskr/templates/signup0.html
@@ -1,40 +1,56 @@
 {% extends "base.html" %}
-{% block title %}Signup System{% endblock %}
+{% set active_page = "signup" %}
+
+<!-- TODO: Signup doesn't keep you logged in -->
+<head>
+    <h1>{% block title %}Signup{% endblock %}</h1>
+</head>
 
 {% block content %}
+<body>
 
-{% if message  %}
+{% if message %}
 <div class="alert alert-secondary" role="alert">
     <p>{{ message }}</p>
 </div>
 {% endif %}
 
-<form action="" method="post">
-    <div class="form-group">
-        <label for="Fullname">Full name</label>
-        <input name="fullname" class="form-control" id="inputFullName" aria-describedby="emailHelp"
-               placeholder="Enter full name">
-        <small id="fullName" class="form-text text-muted">Please enter your full name(First name and Last name)</small>
+<div class="main-body">
+    <h1>Welcome to Signup</h1>
+</div>
+
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <!-- Tabs -->
+        <a href="{{ url_for('login') }}"><h2 class="inactive underlineHover">Login</h2></a>
+        <h2 class="active">Sign Up</h2>
+
+        <!-- Icon -->
+        <div class="fadeIn first">
+            <img src="../static/assets/user.png" id="icon" alt="User Icon"/>
+        </div>
+
+        <!-- Sign up Form -->
+        <form action="" method="post">
+            <div class="form-group">
+                <input type="text" name="fullname" class="fadeIn second form-control" id="inputFullName"
+                       aria-describedby="emailHelp" placeholder="Enter full name">
+            </div>
+            <div class="form-group">
+                <input type="email" name="email" class="fadeIn second form-control" id="InputEmail"
+                       placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <input type="password" name="password1" class="fadeIn third form-control" id="InputPassword"
+                       placeholder="Password">
+            </div>
+            <div class="form-group">
+                <input type="password" name="password2" class="fadeIn third form-control" id="InputPassword2"
+                       placeholder="Repeat Password">
+            </div>
+            <input type="submit" class="fadeIn fourth" value="Sign Up">
+        </form>
     </div>
-    <div class="form-group">
-        <label for="InputEmail">Email address</label>
-        <input name="email" class="form-control" id="InputEmail" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="InputPassword">Password</label>
-        <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Password">
-    </div>
-
-    <div class="form-group">
-        <label for="InputPassword2">Repeat Password</label>
-        <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repeat Password">
-
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-
-
-</form>
-
-
+</div>
+</body>
 {% endblock %}
